features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/publisher/site/themes/wso2/css/custom.css
/* ... */
body.login-bg {
	background-color : #efefef
}

input.ep-field{ min-width: 50%;}
._jsonform-array-ul label{width:118px; margin-left: 0px; }
._jsonform-array-ul label .help_popup{ display: none }


#description {
    resize: vertical; 
}

.modal-content { background: #FFF; color:#000;}
.modal-header h3{ padding: 0px; margin:0px 0px 20px 0px}
.modal-header { background: #e5e5e5; margin-bottom: 20px;}


.navbar-menu-toggle,.navbar-menu-toggle:hover, .navbar-menu-toggle:focus, .navbar-menu-toggle:active{
    background:#222;
}
.navbar-menu-toggle[aria-expanded=true]{
    background:#242932;
}
.form-group label>.requiredAstrix {
    color: #E74C3C;
    font-weight: 400;
    margin-left:2px;
}
.api-search .input-group-btn button{
    line-height:31px;
}

#resource_details .editableform .control-group{
    margin:0px;
}
#resource_details .editable-buttons .editable-cancel{
    margin-left:2px;
}
.sub-form-group label { color: #777; }

.tier_checkbox_label{ display: block; }

.checkbox p {     
    padding: 0 0 0 23px;
    position: relative; 
    margin: 0;
}
#resource_policy_modal.modal .modal-body {
    max-height: 600px !important;
    overflow-y: auto !important;
}
#resource_policy_modal select{
    margin: -6px;
}
.panel-group .panel .form-horizontal,
.wiz-content .form-horizontal,
.modal-body .form-horizontal{
    max-width:100%;
}
.modal-header .close{
    color:#222;
}
.form-group .label{
    display:inline-block;
    margin-top:2px;
    padding:2px 10px;
    line-height: 13px;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
}

